[tool.poetry]
name = "repl_python3_beta_RagaBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
ffmpeg = "^1.4"
PyNaCl = "^1.4.0"
bs4 = "^0.0.1"
lxml = "^4.6.3"
bot-studio = "^1.2.0"
youtube-search = "^2.1.0"
Flask = "^2.0.1"
requests-tor = "^1.1"
youtube-dl2 = "^2.0"
proxy = "^0.0.1"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
